--- a/Res_index.html
+++ b/Res_index.html
@@ -87,7 +87,7 @@
             <li style="color: navy;"><h2><b>ACHIEVEMENTS</b></h2></li>
             <ul>
                 <li>Awarded with Carolyn Leighton Scholarship 2021</li>
-                <li>Received letter of recomandation for my performance in the MyCaptain Web Development Workshop in the month of November, 2021 </li>
+                <li>Received letter of recommendation for my performance in the MyCaptain Web Development Workshop in the month of November, 2021 </li>
                 <li>Awarded certificate of outstanding performance in academics for 5 consecutive years in school.</li>
             </ul>
 
